terraform/product/modules/bootstrap/01-backend/client-2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: customer2-webapp
  name: customer2-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      run: customer2-webapp
  template:
    metadata:
      labels:
        run: customer2-webapp
    spec:
      containers:
      - image: nginx
        name: webapp
        volumeMounts:
        - name: index
          mountPath: "/usr/share/nginx/html"                  
      volumes:
        - name: index
          configMap:
            name: customer2-html
