terraform/product/modules/bootstrap/01-backend/client-2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer2-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: customer2-webapp
  type: ClusterIP
