terraform/product/modules/bootstrap/01-backend/client-2/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: customer2-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-protocol: "v2"
spec:
  ingressClassName: nginx
  rules:
    - host: customer2.testapp.io
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: customer2-svc
              port:
                number: 80
